<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <EditText
        android:id="@+id/longitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/longitude"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/longitudeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.5"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="169dp" />

    <EditText
        android:id="@+id/latitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/latitude"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="210dp" />

    <TextView
        android:id="@+id/latitudeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.5"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="281dp" />

    <EditText
        android:id="@+id/altitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/altitude"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="325dp" />

    <TextView
        android:id="@+id/altitudeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.5"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="397dp" />

    <Button
        android:id="@+id/alarmButton"
        android:layout_width="280dp"
        android:layout_height="136dp"
        android:text="@string/alarm"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="488dp" />
</androidx.constraintlayout.widget.ConstraintLayout>