<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context="">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="85dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/rsbwlogo"
    />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:contentDescription="@string/home"
        app:srcCompat="@drawable/homeiconwhite"
    />


    <android.widget.Button
        android:id="@+id/disarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="70dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"

        android:background="@drawable/disarmbtn"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/disarm"
        android:textColor="#333333"
        android:textSize="42sp"
   />

    <android.widget.Button
        android:id="@+id/alarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disarmButton"

        android:background="@drawable/alertbtn"
        android:text="ALARM!"
        android:fontFamily="@font/bebas_neue"
        android:textSize="64sp"
        android:textColor="#FDF9ED"
    />

    <android.widget.Button
        android:id="@+id/editJourneyButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="145dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmButton"

        android:background="@drawable/btnbgd"
        android:text="@string/edit_journey"
        android:fontFamily="@font/bebas_neue"
        android:textColor="#333333"
        android:textSize="12sp"
    />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="91dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"

        android:fontFamily="@font/bebas_neue"
        android:text="@string/alert"
        android:textColor="#C2414B"
        android:textSize="120sp"
    />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"

        android:fontFamily="@font/oswald"
        android:text="@string/alert_content"
        android:textColor="#FDF9ED"
        android:textSize="26sp"
        android:gravity="center"
    />


</androidx.constraintlayout.widget.ConstraintLayout>