<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="229dp"
        android:layout_height="85dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="91dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/rsbwlogo"
        android:contentDescription="@string/logo"


    />

    <TextView
        android:id="@+id/rollSafeInfo"
        android:layout_width="320dp"
        android:layout_height="264dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="46dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"

        android:fontFamily="@font/oswald"
        android:text="@string/newText"
        android:textColor="#FDF9ED"
        android:textSize="22sp"
        android:gravity="center"
    />

    <android.widget.Button
        android:id="@+id/toMapButton"
        android:layout_width="163.92dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="100dp"

        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:background="@drawable/btnbgd"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/to_main_page"
        android:textSize="28sp"
        android:textColor="#333333"
    />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/policyStuff"
        android:textColor="#FDF9ED"
        android:textSize="11sp"
        android:gravity="center"
    />


</androidx.constraintlayout.widget.ConstraintLayout>